tests/snapshots/typing_any_used/markdown_test__snippet_03.snap
---
source: tests/markdown_test.rs
expression: output
---
error[typing-any-used]: Using `typing.Any` in type annotations can lead to runtime errors.
 --> snippet_03.py:3:12
  |
1 | from typing import Any
2 |
3 | user_info: Any = get_user()
  |            ^^^
  |
info: rule `typing-any-used` is enabled by default
